:point_up: New structure for NeoQuotes project.